--- a/UdemyProjects/_Simple/index.html
+++ b/UdemyProjects/_Simple/index.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <title>熊猫咨询网</title>
+  <base target="_blank">
+  <link rel="shortcut icon" href="pandaIcon.png">
+  <link rel="bookmark" href="pandaIcon.png">
+  <style>
+    table, th, td {
+      border-collapse: collapse;
+      border: 1px solid black;
+    }
+    th, td {
+      padding: 0.25rem;
+    }
+    h2 {color: red;}
+  </style>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <h1>保护熊猫</h1>
@@ -11,5 +25,42 @@
   <p>许多人都认为最好的保育办法就是从野外捉来猫熊进行人工饲养，而饲养条件较差和工作人员缺乏饲养相关的一些科学常识，使许多研究基地成为猫熊永久的牢笼。 对于竹子开花给猫熊带来的负面效果，也通常是通过捕捉猫熊的方式解决，没有研究它的食性进化和评估竹子死亡对它的实际影响。由于栖息地被破坏、环境污染、与种群隔离等原因，使野外种群的繁衍出现危机。 1998年天然林砍伐的全面禁止和禁止个人拥有枪枝的实施，在一定程度上保护了猫熊的生存。1992年以后，向保护区内的移民被禁止，并安排居民陆续迁出，使猫熊的栖息地得到了一定的保证。 经过多年的保护工作，有些地方大猫熊的野外种群数量开始上升。</p>
   <h1>近年发展</h1>
   <p>截至2004年，一个为期4年的《全国第叁次大猫熊调查报告》统计指出野外大猫熊总数约为1596隻，较1985年的1114隻为多。其中仅约有273隻野生秦岭大猫熊，仅占全国大猫熊总数的17％。 2016年9月，随着猫熊数量持续增加，国际自然保护联盟在《红色名录》将其保护状态从濒危调整为易危。</p>
+  <h1>熊猫图片</h1>
+  <img src="images/panda-01.jpg" width="300px" alt="Panda Picture" />
+  <h2>台湾熊猫</h2>
+  <ul>
+    <li>2008年：团团、圆圆到台湾</li>
+    <li>2013年：圆仔出生</li>
+  </ul>
+  <h2>熊猫表格</h2>
+  <table>
+    <tr>
+      <th colspan="3">熊猫国家表格</th>
+    </tr>
+    <tr>
+      <th>国家</th>
+      <th>年份</th>
+      <th>熊猫</th>
+    </tr>
+    <tr>
+      <td>墨西哥</td>
+      <td>1975</td>
+      <td>迎迎、贝贝</td>
+    </tr>
+    <tr>
+      <td>台湾</td>
+      <td>2008</td>
+      <td>团团、圆圆</td>
+    </tr>
+    <tr>
+      <td>日本</td>
+      <td>2011</td>
+      <td>比力、仙女</td>
+    </tr>
+  </table>
+  <h1>相关链接</h1>
+  <a href="https://baike.baidu.com/item/%E5%A4%A7%E7%86%8A%E7%8C%AB/34935?fr=kg_general">百度百科</a>
+  <a href="https://www.google.com">Google</a>
+  <a href="./myform.html">熊猫调查问卷</a>
 </body>
 </html>
